Fixed menu heading spacing

--- a/prototype/css/main.css
+++ b/prototype/css/main.css
@@ -187,6 +187,10 @@ hr {
     margin: auto;
 }
 
+#menu .flex-container {
+    justify-content: space-around;
+}
+
 .icon a,
 .icon h4 {
     margin-left: 10%;
